HC-256: support for iOAM - Proof Of Transit
Change-Id: Ib4260b9b11dbca7016b7b85763d9186d7add0f53
Signed-off-by: Sagar Srivastav <sagsriva@cisco.com>